[package]
name = "rain-cranelift"
version = "0.0.0"
authors = ["Jad Ghalayini <jad.ghalayini@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rain-lang = { git = "https://gitlab.com/tekne/rain.git" }
cranelift = "^0.64"