[package]
name = "rain-cranelift"
version = "0.0.0"
authors = ["Jad Ghalayini <jad.ghalayini@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rain-ir = { git = "https://gitlab.com/rain-lang/rain-ir.git" }
cranelift = "^0.64"